k8s-on-premise-cloud/falco/privileged-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod-test
  labels:
    app: security-test
spec:
  containers:
  - name: nginx-privileged
    image: nginx:latest
    securityContext:
      privileged: true   
    ports:
    - containerPort: 80
    command: ["nginx", "-g", "daemon off;"]
