k8s-on-premise-cloud/falco/falco-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falco-ingress
  namespace: falco
spec:
  ingressClassName: nginx 
  rules:
    - host: falco.nhatanhmovie.website
      http:
        paths:
          - path: /  
            pathType: Prefix  
            backend:
              service:
                name: falco-falcosidekick-ui
                port:
                  number: 2802
